💡 更新项目文档，完善命令构建说明,添加CRF,多线程，音视频分离，简单文字水印添加，简单视频剪辑，添加弹窗，检查ffmpeg安装情况